# red

./: CMakeLists.txt  PKGBUILD  README.md  bear-2.1.5-1-x86_64.pkg.tar.xz
bear/: main.py.in
doc/: CMakeLists.txt  red.1.in
libear/: ear.c
libred/: CMakeLists.txt  config.h.in  red.c
red/: CMakeLists.txt  main.py.in
